gitops/apps/rhcl-demo/overlays/rhcl2-mcp-gateway/patch-rhcl2-mcp-gateway-values.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rhcl-mcp-gateway
  namespace: mcp-system
spec:
  hostnames:
    - mcp.sandbox921.opentlc.com
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rhcl-mcp-tools
  namespace: mcp-system
spec:
  hostnames:
    - mcp.sandbox921.opentlc.com
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rhcl-mcp-tools
  namespace: mcp-system
spec:
  template:
    spec:
      containers:
        - name: app
